# coral

./: README.md  mkdocs.yml  pyproject.toml
docs/: develop.md  index.md  template.md
docs/examples/: common.md  input.md  interface.md  node_type.md  performance.md
docs/modules/: common.md  communication.md  monitoring.md  params.md
examples/hello_world/node1/: config.json  node1.py
examples/hello_world/node2/: config.json  node2.py
examples/hello_world/node3/: config.json  node3.py
src/coral/: __init__.py  constants.py  coral.py  exception.py  metrics.py  parse.py  sched.py  utils.py
src/coral/messages/: sync.py
src/coral/parser/: __init__.py  _base.py  pbase64.py  pjson.py  pxml.py
src/coral/types/: __init__.py  config.py  payload.py
