[project]
name = "loop-pycoral"
version = "0.1.2"
description = "Coral(珊瑚)是一个封装了zeromq、ros2等底层通信工具的上层通用通信包，同时统一了标准的节点入参和通信数据格式的框架"
authors = [
    { name = "zhaokefei", email = "zhaokefei@tezign.com" }
]
dependencies = [
    "wrapyfi[all]~=0.4.30",
    "dotmap~=1.3.30",
    "pyrsistent~=0.20.0",
    "pydantic~=2.5.3",
    "xmltodict~=0.13.0",
    "loguru~=0.7.2",
    "prometheus-client~=0.19.0",
    "schedule~=1.2.1",
    "filelock~=3.13.1",
    "numpy~=1.26.0",
    "opencv-python>=4.9.0.80",
    "requests>=2.31.0",
    "paho-mqtt>=2.0.0",
    "SharedArray>=3.2.3",
    "apscheduler>=3.10.4",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coral"]

[tool.rye]
managed = true

[tool.rye.workspace]
members = ["src/coral-*"]

[[tool.rye.sources]]
name = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
