[tool.poetry]
name = "loop-pycoral"
version = "0.1.3"
description = ""
packages = [
    {include="src", from="."}
]
authors = ["zhaokefei <zhaokefei@tezign.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
xmltodict = "~0.13.0"
loguru = "~0.7.2"
apscheduler = "~3.10.4"
sharedarray = "~3.2.3"
paho-mqtt = "~2.0.0"
requests = "~2.31.0"
numpy = "~1.24"
pydantic = "^2.6.4"
opencv-python = "~4.8"
wrapyfi = "^0.4.43"
pyzmq = "^25.1.2"
opencv-contrib-python = "~4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
